# entrance_1440

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
docs/: arch.drawio  task.txt
src/: main.py  simulator.py
src/api/: logic.py
src/api/endpoints/: endpoints.py
src/api/logic/: get_current_data.py
src/api/models/: channel_on_model.py  data_model.py
src/config/: __init__.py  settings.py
src/devices/: __init__.py  dc_power_supply.py  device.py  device_manager.py  scpi.py
src/hardware/: __init__.py  device_manager.py  error.py
src/hardware/commands/: __init__.py  command.py  device_commands.py
src/hardware/devices/: __init__.py  device.py  power_supply.py
src/hardware/protocols/: __init__.py  protocol.py  scpi.py
src/storages/: __init__.py  ipc_storage.py  storage.py
src/telemetry/: __init__.py  telemetry.py
tests/: conftest.py  test_endpoints.py
