[tool.poetry]
name = "entrance-1440"
version = "0.1.0"
description = ""
authors = ["igor <igor_m_87@mail.ru>"]
readme = "README.md"
packages = [{include = "entrance_1440"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
